@@ -1,4 +1,4 @@
-Copyright (C) 2011-2012 Roland Winkler <winkler@gnu.org>
+Copyright (C) 2011-2013 Roland Winkler <winkler@gnu.org>
 See the end of the file for license conditions.
 
 ===============================================================================
@@ -75,7 +75,7 @@ with 'subscribe' as the subject.
 
 ==================================================================
 
-Copyright (C) 2011-2012 Roland Winkler <winkler@gnu.org>
+Copyright (C) 2011-2013 Roland Winkler <winkler@gnu.org>
 
 This file is part of the Insidious Big Brother Database (aka BBDB),
 
