@@ -1,4 +1,4 @@
-Copyright (C) 2010-2012 Roland Winkler <winkler@gnu.org>
+Copyright (C) 2010-2013 Roland Winkler <winkler@gnu.org>
 See the end of the file for license conditions.
 
 BBDB is the Insidious Big Brother Database for GNU Emacs. It
@@ -146,7 +146,7 @@ sequence of calls is
 
 ==================================================================
 
-Copyright (C) 2010-2012 Roland Winkler <winkler@gnu.org>
+Copyright (C) 2010-2013 Roland Winkler <winkler@gnu.org>
 
 This file is part of the Insidious Big Brother Database (aka BBDB),
 
