@@ -3,10 +3,10 @@ dnl configure.ac --- configuration setup for BBDB
 dnl Author:        Didier Verna <didier@xemacs.org>
 dnl Maintainer:    Roland Winkler <winkler@gnu.org>
 dnl Created:       Tue Nov 14 18:28:52 2000
-dnl Last Revision: $Date: 2012/06/24 08:13:19 $
+dnl Last Revision: $Date: 2013/01/13 18:44:58 $
 
 dnl Copyright (C) 2000-2001 Didier Verna <didier@xemacs.org>
-dnl Copyright (C) 2011-2012 Roland Winkler <winkler@gnu.org>
+dnl Copyright (C) 2011-2013 Roland Winkler <winkler@gnu.org>
 
 dnl BBDB is free software: you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -29,8 +29,8 @@ BBDB_PRE_INIT
 AC_INIT([BBDB],[BBDB_VERSION],[bbdb-info@lists.sourceforge.net])
 
 AC_COPYRIGHT([Copyright (C) 2000-2001 Didier Verna <didier@xemacs.org>.
-Copyright (C) 2011 Roland Winkler <winkler@gnu.org>.])
-AC_REVISION([$Revision: 1.13 $])
+Copyright (C) 2011-2013 Roland Winkler <winkler@gnu.org>.])
+AC_REVISION([$Revision: 1.15 $])
 
 AC_CONFIG_SRCDIR([configure.ac])
 AC_CONFIG_FILES([Makefile
