@@ -1,7 +1,7 @@
 ;;; bbdb-com.el --- user-level commands of BBDB
 
 ;; Copyright (C) 1991, 1992, 1993 Jamie Zawinski <jwz@netscape.com>.
-;; Copyright (C) 2010-2012 Roland Winkler <winkler@gnu.org>
+;; Copyright (C) 2010-2013 Roland Winkler <winkler@gnu.org>
 
 ;; This file is part of the Insidious Big Brother Database (aka BBDB),
 
@@ -965,7 +965,7 @@ a phone number or address with VALUE being nil."
 
 (defun bbdb-read-organization (&optional default)
   "Read organization."
-  (if (string< "24.2" emacs-version)
+  (if (string< "24.3" emacs-version)
       (let ((crm-separator
              (concat "[ \t\n]*"
                      (cadr (assq 'organization bbdb-separator-alist))
