@@ -1,4 +1,4 @@
-# Copyright (C) 2010-2012 Roland Winkler <winkler@gnu.org>
+# Copyright (C) 2010-2013 Roland Winkler <winkler@gnu.org>
 # 
 # This file is part of the Insidious Big Brother Database (aka BBDB),
 # 
